; ModuleID = '/home/carl/AnghaBench/qmk_firmware/drivers/issi/extr_is31fl3733.c_IS31FL3733_write_register.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/drivers/issi/extr_is31fl3733.c_IS31FL3733_write_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_twi_transfer_buffer = common dso_local global i64* null, align 8
@ISSI_TIMEOUT = common dso_local global i32 0, align 4
@ISSI_PERSISTENCE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @IS31FL3733_write_register(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = load i64*, i64** @g_twi_transfer_buffer, align 8
  %9 = getelementptr inbounds i64, i64* %8, i64 0
  store i64 %7, i64* %9, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64*, i64** @g_twi_transfer_buffer, align 8
  %12 = getelementptr inbounds i64, i64* %11, i64 1
  store i64 %10, i64* %12, align 8
  %13 = load i64, i64* %4, align 8
  %14 = shl i64 %13, 1
  %15 = load i64*, i64** @g_twi_transfer_buffer, align 8
  %16 = load i32, i32* @ISSI_TIMEOUT, align 4
  %17 = call i64 @i2c_transmit(i64 %14, i64* %15, i32 2, i32 %16)
  ret void
}

declare dso_local i64 @i2c_transmit(i64, i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
